--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,8 @@ Suggests:
     knitr,
     rmarkdown,
     ggplot2,
-    testthat
+    testthat,
+    rvest
 VignetteBuilder: knitr
 Depends: R (>= 2.10)
 RoxygenNote: 6.0.1
